--- a/primeiroprograma/.project
+++ b/primeiroprograma/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>entrada-de-dados</name>
+	<name>primeiroprograma</name>
 	<comment></comment>
 	<projects>
 	</projects>
